--- a/index.html
+++ b/index.html
@@ -20,7 +20,11 @@
       </div>
       <dl class="row">
         <dt class="col-sm-3">Heian shodan-godan and Tekki shodan</dt>
-        <dd class="col-sm-9"><iframe width="560" height="315" src="https://www.youtube.com/embed/okPeQz2sxIc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></dd>
+        <dd class="col-sm-6">
+          <div class="embed-responsive embed-responsive-16by9">
+            <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/okPeQz2sxIc" allowfullscreen></iframe>
+          </div>
+        </dd>
       </dl>
     </div>
   </body>
