--- a/index.html
+++ b/index.html
@@ -19,6 +19,12 @@
         </div>
       </div>
       <dl class="row">
+        <dt class="col-sm-3">Comportamiento en el dojo</dt>
+        <dd class="col-sm-6">
+          <img src="img/comportamiento.jpeg" class="img-fluid">
+        </dd>
+      </dl>
+      <dl class="row">
         <dt class="col-sm-3">Heian shodan-godan and Tekki shodan</dt>
         <dd class="col-sm-6">
           <div class="embed-responsive embed-responsive-16by9">
