--- a/index.html
+++ b/index.html
@@ -25,6 +25,24 @@
         </dd>
       </dl>
       <dl class="row">
+        <dt class="col-sm-3">Order de graduaciones</dt>
+        <dd class="col-sm-6">
+          <img src="img/orden.jpeg" class="img-fluid">
+        </dd>
+      </dl>
+      <dl class="row">
+        <dt class="col-sm-3">Golpes</dt>
+        <dd class="col-sm-6">
+          <img src="img/golpes.jpeg" class="img-fluid">
+        </dd>
+      </dl>
+      <dl class="row">
+        <dt class="col-sm-3">Posición de pies</dt>
+        <dd class="col-sm-6">
+          <img src="img/pies.jpeg" class="img-fluid">
+        </dd>
+      </dl>
+      <dl class="row">
         <dt class="col-sm-3">Heian shodan-godan and Tekki shodan</dt>
         <dd class="col-sm-6">
           <div class="embed-responsive embed-responsive-16by9">
