--- a/index.html
+++ b/index.html
@@ -43,6 +43,30 @@
         </dd>
       </dl>
       <dl class="row">
+        <dt class="col-sm-3">Taikyoku shodan (blancas)</dt>
+        <dd class="col-sm-6">
+          <div class="embed-responsive embed-responsive-16by9">
+            <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/yzIQJsRJzEk" allowfullscreen></iframe>
+          </div>
+        </dd>
+      </dl>
+      <dl class="row">
+        <dt class="col-sm-3">Taikyoku shodan (blancas)</dt>
+        <dd class="col-sm-6">
+          <div class="embed-responsive embed-responsive-16by9">
+            <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/bf4YAhdEMlc" allowfullscreen></iframe>
+          </div>
+        </dd>
+      </dl>
+      <dl class="row">
+        <dt class="col-sm-3">Heian shodan (amarillas)</dt>
+        <dd class="col-sm-6">
+          <div class="embed-responsive embed-responsive-16by9">
+            <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/flOkkecJ8Pg" allowfullscreen></iframe>
+          </div>
+        </dd>
+      </dl>
+      <dl class="row">
         <dt class="col-sm-3">Heian shodan-godan and Tekki shodan</dt>
         <dd class="col-sm-6">
           <div class="embed-responsive embed-responsive-16by9">
